# wobblemidi

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pocketmidi_rebuild_spec.md  pocketmidi_rebuild_spec_addendum.md  pocketmidi_roadmap.md  pyproject.toml  wobblemidi-gui.spec  wobblemidi_determinism.md  wobblemidi_porting_contract.md  wobblemidi_rebuild_spec.md  wobblemidi_rebuild_spec_addendum.md  wobblemidi_roadmap.md  wobblemidi_streamability.md
.github/workflows/: ci.yml
calibration/: tier2_calibration.md  tier2_calibration_full.json  tier2_thresholds.json
demo/: README.md  flam_beat_humanised.mid  flam_beat_input.mid  flam_beat_uncoupled.mid  four_floor_humanised.mid  four_floor_input.mid  rock_4bar_phi0.mid  rock_4bar_phi05.mid
pocketmidi/: cli.py  humanise.py  midi_utils.py
pocketmidi_gui/: adapter.py  app.py
pocketmidi_gui/web/: audio.js  bridge.js  index.html  knobs.js  main.js  screen.js  style.css
scripts/: build_app.sh  build_profiles.py  calibrate_phi.py  calibrate_tier2.py  compare_port.py  gui_launcher.py  make_demo.py  make_demo_pack.py  make_eartest.py  make_golden.py  validate.py  verify_golden.py
tests/: .gitignore  test_build_profiles.py  test_cli.py  test_compare_port.py  test_golden_vectors.py  test_gui_adapter.py  test_humanise.py  test_midi_utils.py  test_review_fixes.py  test_validate.py
tests/fixtures/: pre_r3_push0_phi00.mid  pre_r3_push0_phi05.mid  pre_r3_push1_phi00.mid  pre_r3_push1_phi05.mid
tests/golden/: manifest.json
tests/golden/inputs/: f1_rock_4bar.mid  f2_rock_ghosts.mid  f4_flam_cluster.mid  f5_sixeight.mid  f6_threefour.mid  f7_multitrack.mid  f8_tempomap.mid  f9_single_hit.mid
tests/golden/outputs/: f1_cli.mid  f1_intensity10.mid  f1_lean_half.mid  f1_lean_mirror.mid  f1_phi00.mid  f1_phi09.mid  f1_push.mid  f1_seed7.mid  f2_default.mid  f2_fill.mid  f2_timing_only.mid  f2_velocity_only.mid  f4_default.mid  f4_hats_pinned.mid  f4_phi00.mid  f5_default.mid  f6_default.mid  f7_all_channels.mid  f7_default.mid  f7_lanes.mid  f8_default.mid  f9_single_default.mid
tests/tier2/: t2_full_kit.mid
wobblemidi/: cli.py  humanise.py
wobblemidi_gui/: adapter.py  app.py
wobblemidi_gui/web/: bridge.js  index.html  knobs.js  screen.js  style.css
