[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocketmidi"
version = "0.1.0"
description = "Humanise programmed drum MIDI using real drummer performance data"
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "click>=8.1",
]

[project.scripts]
pocketmidi = "pocketmidi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build]
include = [
    "pocketmidi/**/*.py",
    "pocketmidi/profiles/*.json",
]
