[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wobblemidi"
version = "0.1.0"
description = "Humanise programmed drum MIDI using real drummer performance data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jakeb Gutierrez" }]
dependencies = [
    "mido>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "click>=8.1",
]

[project.scripts]
wobblemidi = "wobblemidi.cli:main"
wobblemidi-gui = "wobblemidi_gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
gui = [
    "pywebview>=6",
]

[tool.hatch.build]
include = [
    "wobblemidi/**/*.py",
    "wobblemidi/profiles/*.json",
    "wobblemidi_gui/**/*.py",
    "wobblemidi_gui/web/**",
]
